// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App default 1`] = `
<div
  className="css-twzzml-⚡Container e146scqn0"
>
  <header
    className="css-1jpebxu-⚡Header e146scqn2"
  >
    <img
      alt="logo"
      className="css-1yykcae-⚡Image e146scqn1"
      src="logo.svg"
    />
    <h1
      className="css-1ixffpw-⚡H1 e146scqn3"
    >
      Welcome to React
    </h1>
  </header>
  <p
    className="css-svh8gb-⚡Text e146scqn4"
  >
    To get started, edit
    <span>
       
      <code>
        src/components/App.js
      </code>
    </span>
     and save to reload.
  </p>
</div>
`;

exports[`Storyshots App with different welcome message 1`] = `
<div
  className="css-twzzml-⚡Container e146scqn0"
>
  <header
    className="css-1jpebxu-⚡Header e146scqn2"
  >
    <img
      alt="logo"
      className="css-1yykcae-⚡Image e146scqn1"
      src="logo.svg"
    />
    <h1
      className="css-1ixffpw-⚡H1 e146scqn3"
    >
      Welcome with a different welcome message
    </h1>
  </header>
  <p
    className="css-svh8gb-⚡Text e146scqn4"
  >
    To get started, edit
    <span>
       
      <code>
        src/components/App.js
      </code>
    </span>
     and save to reload.
  </p>
</div>
`;
